src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <description>Used by internal contacts to set the priority on a case they create via email or web intake form</description>
        <label>Case Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HS_Audit_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for mass emailing contacts where the HS Audit is pending or Not Started</description>
        <label>HS Audit Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health &amp; Safety Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Contact_Key__c</fullName>
        <description>Stores a unique identifier for a contact when integrating from an external system.  This will keep the last name and email address as a composite key unique id in the format of [lastname]-[email]</description>
        <externalId>true</externalId>
        <label>Integration Contact Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <formula>SUBSTITUTE(MailingStreet, &apos;\n&apos;, &apos;nuffin&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Fax__c</fullName>
        <label>Other Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQC Hotel Vendor Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedia Quick Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Desk Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Office Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Services Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHG Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Content Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reservations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venere Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venere Connect Hotel Vendor Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa Support</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>leadScoring__Campaign_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>leadScoring__Total_Lead_Score__c</fullName>
        <description>Value from the converted lead</description>
        <formula>leadScoring__Lead_Score__c + leadScoring__Campaign_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <group>Administrators</group>
            <group>Destination Services</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Destination_Services</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Destination Services</label>
    </listViews>
    <listViews>
        <fullName>Health_Safety_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Health_Safety_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Health_Safety_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Health &amp; Safety Contacts</label>
        <sharedTo>
            <group>Administrators</group>
            <group>Health &amp; Safety</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Case_Priority__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Internal_Contact</value>
        </filters>
        <label>Internal Contacts</label>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Standard external contact</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Safety</fullName>
        <active>true</active>
        <label>Health &amp; Safety</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>Used for Expedia contacts that are not Salesforce users</description>
        <label>Internal Contact</label>
    </recordTypes>
</CustomObject>